Fixed purchase links so the button doesn't break at line breaks and so margins are kept in tact on mobile.

--- a/less/app.less
+++ b/less/app.less
@@ -519,6 +519,7 @@ h1 + #story-meta { margin-top: -11px; }
 		padding: 8px 8px 8px 25px;
 		text-align: right;
 		margin: 4px 2px 4px 2px;
+		line-height: 5em;
 	}
 
 	>a:hover {
